[gd_scene load_steps=22 format=3 uid="uid://lvgdw3te2pj2"]

[ext_resource type="Script" path="res://Pages/Main_ChatsPage/main_chats_page.gd" id="1_8y3eq"]
[ext_resource type="ButtonGroup" uid="uid://c087wss6fec0u" path="res://Pages/Main_ChatsPage/friend_item_group.tres" id="2_qvqxd"]
[ext_resource type="Texture2D" uid="uid://5co56ibkg0lp" path="res://Assets/Icon/search_white.svg" id="3_7hjx1"]
[ext_resource type="Texture2D" uid="uid://dq2t5geycnvr6" path="res://Assets/Icon/emoji_icon.png" id="4_wmc0r"]
[ext_resource type="Script" path="res://Pages/Main_ChatsPage/text_edit_controller.gd" id="5_jsh4u"]
[ext_resource type="Script" path="res://Pages/Main_ChatsPage/firend_controller.gd" id="6_gclwa"]
[ext_resource type="Script" path="res://Pages/Main_ChatsPage/message_net.gd" id="7_fatve"]
[ext_resource type="Script" path="res://Pages/Main_ChatsPage/search_button_controller.gd" id="8_3j3ir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_su6wl"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_bottom_left = 12
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm3ib"]
bg_color = Color(0.603922, 0.603922, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tavsm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_right = 12
corner_radius_bottom_right = 12
shadow_color = Color(1, 1, 1, 0.6)
shadow_size = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7b5dt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tg60"]
bg_color = Color(0.603922, 0.603922, 0.8, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 6.0
expand_margin_right = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g23yk"]
bg_color = Color(0.603922, 0.603922, 0.8, 1)
expand_margin_left = 11.0
expand_margin_top = 4.0
expand_margin_right = 11.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0vbp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wol56"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djwoi"]
bg_color = Color(0.821789, 0.821789, 0.821788, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqb1v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n521d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oxoil"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_njssj"]

[node name="Main_ChatsPage" type="HBoxContainer" node_paths=PackedStringArray("FriendArea", "ChatPanel", "TextInput", "TextArea", "TextView", "SearchButton")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_8y3eq")
FriendAreaButtonGroup = ExtResource("2_qvqxd")
FriendArea = NodePath("Middle/VBoxContainer/Friends/ScrollContainer/FriendArea")
ChatPanel = NodePath("Content/ChatPanel")
TextInput = NodePath("Content/ChatPanel/VBoxContainer/TextInputArea/TextEdit")
TextArea = NodePath("Content/ChatPanel/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer")
TextView = NodePath("Content/ChatPanel/VBoxContainer/ScrollContainer")
SearchButton = NodePath("Middle/VBoxContainer/MarginContainer/Search")

[node name="Middle" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_su6wl")

[node name="VBoxContainer" type="VBoxContainer" parent="Middle"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Middle/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 14

[node name="Search" type="Button" parent="Middle/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_pm3ib")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pm3ib")
theme_override_styles/normal = SubResource("StyleBoxFlat_pm3ib")
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Middle/VBoxContainer/MarginContainer/Search"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 26.0
offset_bottom = 24.0
texture = ExtResource("3_7hjx1")
expand_mode = 1

[node name="Friends" type="MarginContainer" parent="Middle/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="Middle/VBoxContainer/Friends"]
layout_mode = 2
size_flags_vertical = 3

[node name="FriendArea" type="VBoxContainer" parent="Middle/VBoxContainer/Friends/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tavsm")

[node name="ChatPanel" type="MarginContainer" parent="Content"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Content/ChatPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NowChatTarget" type="Label" parent="Content/ChatPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Content/ChatPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Content/ChatPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Content/ChatPanel/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 26

[node name="Tools" type="HBoxContainer" parent="Content/ChatPanel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Content/ChatPanel/VBoxContainer/Tools"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7b5dt")

[node name="Emoji" type="Button" parent="Content/ChatPanel/VBoxContainer/Tools"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_3tg60")
theme_override_styles/hover = SubResource("StyleBoxFlat_3tg60")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3tg60")
theme_override_styles/normal = SubResource("StyleBoxFlat_3tg60")
icon = ExtResource("4_wmc0r")
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/ChatPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxFlat_g23yk")

[node name="TextInputArea" type="PanelContainer" parent="Content/ChatPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h0vbp")

[node name="TextEdit" type="TextEdit" parent="Content/ChatPanel/VBoxContainer/TextInputArea"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_wol56")

[node name="EmojiPnael" type="MarginContainer" parent="Content"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Background" type="PanelContainer" parent="Content/EmojiPnael"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_djwoi")

[node name="MarginContainer" type="MarginContainer" parent="Content/EmojiPnael/Background"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="Content/EmojiPnael/Background/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 18
theme_override_constants/v_separation = 18
columns = 4

[node name="DogFace" type="Button" parent="Content/EmojiPnael/Background/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqb1v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_n521d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxoil")
theme_override_styles/normal = SubResource("StyleBoxEmpty_njssj")

[node name="Controller" type="Node" parent="."]

[node name="TextEditController" type="Node" parent="Controller"]
script = ExtResource("5_jsh4u")

[node name="FirendController" type="Node" parent="Controller"]
script = ExtResource("6_gclwa")

[node name="MessageNetController" type="Node" parent="Controller"]
script = ExtResource("7_fatve")

[node name="SearchButtonController" type="Node" parent="Controller"]
script = ExtResource("8_3j3ir")
